Streamlined options, py3 compatible

--- a/APOGEE Data "Zero to Hero".ipynb
+++ b/APOGEE Data "Zero to Hero".ipynb
@@ -63,14 +63,6 @@
     "  - pyfits\n",
     "  - matplotlib\n",
     "\n",
-    "  Optional:\n",
-    "\n",
-    "  + APOGEE module [[https://github.com/jobovy/apogee]] Jo Bovy has\n",
-    "    written an excellent python module designed to interact and\n",
-    "    manipulate APOGEE data. It simplifies many of the basic operations\n",
-    "    we will cover below and also provides more advanced tools for\n",
-    "    dealing with individual APOGEE spectra. Highly recommended!\n",
-    "\n",
     "  This notebook will likely still be valuable to you, but less so, if\n",
     "  you are using a language other than python. There are official data\n",
     "  exploration examples using the CAS database, IDL, or python at\n",
@@ -86,37 +78,19 @@
     "4 The Summary File\n",
     "==================\n",
     "\n",
-    "  The APOGEE *allStar* summary FITS table is arguably the easiest way to\n",
-    "  interact with APOGEE parameters. Many within the collaboration prefer\n",
-    "  interacting with this file instead of the SDSS CAS (despite the\n",
-    "  splendid design of the CAS). The fact that the entirety of APOGEE-1\n",
-    "  summary parameters is less than 1 GB in size makes it incredibly easy\n",
-    "  to work with the APOGEE dataset. The allStar file \"\"\" provides\n",
-    "  information for each individual star observed in APOGEE-1, which\n",
-    "  includes mean barycentric radial velocity, the standard deviation of\n",
-    "  the mean velocity, ASPCAP parameters and abundances as derived from\n",
-    "  the combined spectra, and a compilation of ancillary targeting data.\n",
-    "  \"\"\" - [http://www.sdss.org/dr12/irspec/catalogs/]\n",
+    "  The APOGEE *allStar* summary file is one of two APOGEE [parameter catalogs](http://www.sdss.org/dr12/irspec/catalogs/) available as FITS tables. The entire summary parameter catalog is less than 1 GB in size, making it very portable and easy to access.\n",
+    "  The allStar file \n",
+    "  >provides\n",
+    "  >information for each individual star observed in APOGEE-1, which\n",
+    "  >includes mean barycentric radial velocity, the standard deviation of\n",
+    "  >the mean velocity, ASPCAP parameters and abundances as derived from\n",
+    "  >the combined spectra, and a compilation of ancillary targeting data.\n",
+    "  \n",
+    "  >-[APOGEE official documentation](http://www.sdss.org/dr12/irspec/catalogs/)\n",
     "\n",
-    "  The latest, official Data Release is SDSS DR12. The APOGEE summary\n",
-    "  file for this release is availabe at\n",
-    "  [http://data.sdss3.org/sas/dr12/apogee/spectro/redux/r5/allStar-v603.fits]\n",
-    "  (~683 MB)\n",
+    "  The latest, official Data Release from SDSS is DR12. The APOGEE summary\n",
+    "  file for this release is named 'allStar-v603.fits' (~683 MB). The rest of this tutorial will focus on interacting with this catalog.\n",
     "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 4.1 Summary File Structure and Data model\n",
-    "\n",
-    "  The Summary file is a FITS table, a common astronomical file format. A\n",
-    "  full description of the file's contents, including the table columns\n",
-    "  and datatypes, is available at:\n",
-    "  [https://data.sdss.org/datamodel/files/APOGEE_REDUX/APRED_VERS/APSTAR_VERS/ASPCAP_VERS/RESULTS_VERS/allStar.html]\n",
-    "  [This was password protected for me, check?]\n",
     "\n"
    ]
   },
@@ -127,23 +101,19 @@
     "5 Getting the Data\n",
     "==================\n",
     "\n",
-    "  **Option 1**: Directly download the allStar file from:\n",
-    "  [http://data.sdss3.org/sas/dr12/apogee/spectro/redux/r5/allStar-v603.fits]\n",
-    "\n",
-    "  **Option 2**: Run through the code below. The allStar file will\n",
-    "  automatically be downloaded.\n",
-    "\n",
-    "If you have already downloaded the allStar file, the code below will skip that step automatically provided the [`data_directory`](#6 Data off disk and into memory) variable below is defined correctly."
+    "  **Option 1**: Directly download the allStar file [here](http://data.sdss3.org/sas/dr12/apogee/spectro/redux/r5/allStar-v603.fits). Once the catalog is downloaded, move the file  into the path assigned to the `data_directory` variable in Section 6.2. The catalog is large (~683 MB) so it might be best to download the catalog first and then finish the tutorial.\n",
+    "  \n",
+    "  **Option 2**: Automatic Download. As you run the code, it will search for the *allStar-v603.fits* file in the path assigned to `data_directory`. If it is not found, the catalog will be downloaded."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##6 Data off disk and into memory\n",
+    "##6 Loading the *allStar* Summary File\n",
     "\n",
     "### 6.1 Python Preamble \n",
-    "You need to press `Shift+Enter` to execute the code cells. The preamble just contains some useful modules, functions, and plot formatting snippets. "
+    "You need to press `Shift+Enter` to execute the code cells below. The preamble just contains some useful modules, functions, and plot formatting snippets. "
    ]
   },
   {
@@ -163,22 +133,22 @@
     "%matplotlib inline\n",
     "\n",
     "###Plot formatting commands\n",
-    "plt.rc('figure', figsize=(10.0, 7.1))\n",
-    "plt.rc('xtick', labelsize=14)\n",
+    "plt.rc('figure', figsize=(10.0, 7.1)) #bigger figures\n",
+    "plt.rc('xtick', labelsize=14)  #bigger labels\n",
     "plt.rc('ytick', labelsize=14)\n",
     "###End formatting commands\n",
     "\n",
     "\n",
     "#Progress bar function for automatic download\n",
-    "from IPython.display import clear_output\n",
-    "def report(count, blockSize, totalSize):\n",
+    "from IPython.display import clear_output   #function to clear cell output\n",
+    "def report(count, blockSize, totalSize):   #function to report download percentage\n",
     "    percent = int(count*blockSize*100/totalSize)\n",
     "    clear_output()\n",
     "    print('{}% complete\\r'.format(percent))\n",
     "    sys.stdout.flush()\n",
     "    \n",
     "### Functions for automatic downloading of catalog\n",
-    "import urllib \n",
+    "import urllib  \n",
     "### Checking for python 2 or 3\n",
     "if sys.version_info > (3,0): # If python3\n",
     "    geturl_func = urllib.request.urlretrieve\n",
@@ -192,7 +162,7 @@
    "source": [
     "### 6.2 APOGEE Data Path\n",
     "\n",
-    "  *MAKE SURE TO DEFINE YOUR DATA PATH in the next cell*\n",
+    "   <span style=\"color:red\">**MAKE SURE TO DEFINE YOUR DATA PATH in the next cell**</span>\n",
     "\n",
     "  The `data_directory` variable is the diretory where your summary\n",
     "  file is located OR where you want the summary file downloaded. Make sure this\n",
@@ -203,11 +173,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "data_directory = \"/hd1/obs_data/apogee2/\"  #### CHANGE THIS PATH!!\n",
+    "data_directory = \"/path/to/allStarfile/\"  #### CHANGE THIS PATH\n",
     "\n",
     "if not os.path.exists(data_directory):\n",
     "    print(\"\\nMake sure the data_directory path exists!\\n\")\n",
@@ -221,21 +191,7 @@
    "source": [
     "### 6.3 Reading the allStar File\n",
     "\n",
-    "  There are two easy methods for reading the allStar file into memory.\n",
-    "  **Please execute EITHER the pyfits module code OR the apogee code blocks\n",
-    "  below.** Running both will likely lead to problems.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Option 1: `pyfits`\n",
-    "\n",
-    "  For more information about PyFITS, see\n",
-    "  [http://www.stsci.edu/institute/software_hardware/pyfits]. Note that\n",
-    "  pyfits is the precursor to the astropy.io.fits package, so users\n",
-    "  familiar with astropy can substitute astropy.io.fits for pyfits below.\n"
+    "The *allStar* file is a FITS table, a common astronomical data format. To read it off disk and into memory, we will use the popular [astropy](http://www.astropy.org/) package which includes the latest version of `pyfits` FITS reader. The code below will first try to use `astropy` but will automatically fall back to `pyfits` if `astropy` is not installed. At least one of these packages must be installed to continue. Note that  [pyfits](http://www.stsci.edu/institute/software_hardware/pyfits) is the precursor to the `astropy.io.fits` package."
    ]
   },
   {
@@ -246,10 +202,13 @@
    },
    "outputs": [],
    "source": [
-    "import pyfits\n",
+    "try:\n",
+    "    import astropy.io.fits as pyfits\n",
+    "except ImportError:\n",
+    "    import pyfits\n",
     "\n",
     "allStar_file = 'allStar-v603.fits'\n",
-    "allStar_localpath = data_directory+allStar_file\n",
+    "allStar_localpath = os.path.join(data_directory,allStar_file)\n",
     "\n",
     "allStar_file_link = \"http://data.sdss3.org/sas/dr12/apogee/spectro/redux/r5/allStar-v603.fits\"\n",
     "\n",
@@ -265,41 +224,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Option 2: `APOGEE`\n",
+    "### 6.4 APOGEE *allStar* catalog as python variable\n",
     "\n",
     "\n",
-    "  We refer the user to [[https://github.com/jobovy/apogee]] for\n",
-    "  installation instuctions and assume you have a working install in the\n",
-    "  remainder of the notebook.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "os.environ['APOGEE_DATA'] = data_directory\n",
-    "os.environ['APOGEE_REDUX'] = 'v603' #DR12 reduction version\n",
-    "\n",
-    "import apogee.tools.read as apread\n",
-    "allStar= apread.allStar()  #will automatically download if catalog not available\n",
-    "print (\"AllStar file Loaded\")\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 6.3 The APOGEE allStar catalog\n",
-    "\n",
-    "\n",
-    "  Using either pyfits or apogee, the allStar variable is now a numpy\n",
-    "  record array, a wrapper around numpy.ndarray\n",
-    "  ([http://docs.scipy.org/doc/numpy/reference/generated/numpy.ndarray.html]). You can see the number of summary file entries with\n",
-    "\n",
+    "  The allStar variable is now a numpy\n",
+    "  record array, a wrapper around [numpy.ndarray](http://docs.scipy.org/doc/numpy/reference/generated/numpy.ndarray.html). The total number of stars in the catalog is equal to the number of rows in the table. Check the number of rows with \n",
     "\n"
    ]
   },
@@ -336,12 +265,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "7 Data Model, columns of interest\n",
+    "7 *allStar* Data Model\n",
     "=================================\n",
     "\n",
-    "A lot of your interaction with the APOGEE catalog will be through pulling out the information that interests you from the `allStar` file. It's a good idea to later familiarize yourself with the file.\n",
+    "A lot of your interaction with the APOGEE catalog will be through pulling out the information that interests you from the `allStar` file. It's a good idea to familiarize yourself with the catalog's contents.\n",
     "\n",
-    "The APOGEE Summary file data model can be found  http://data.sdss3.org/datamodel/files/APOGEE_REDUX/APRED_VERS/APSTAR_VERS/ASPCAP_VERS/RESULTS_VERS/allStar.html\n",
+    "The APOGEE team provides a full description of the *allStar* file via the [data model](http://data.sdss3.org/datamodel/files/APOGEE_REDUX/APRED_VERS/APSTAR_VERS/ASPCAP_VERS/RESULTS_VERS/allStar.html). Some details, like the size of the catalog on disk, will likely be different than v603 (the version you downloaded).\n",
     " \n",
     " A non-exhaustive list of important fields (some of which we will use below):\n",
     "\n",
@@ -375,7 +304,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "7.0.1 Sky map of the APOGEE Catalog\n",
+    "7.1 Sky map of the APOGEE Catalog\n",
     "-----------------------------------\n",
     "\n",
     "  Now that you have loaded the catalog, we can make our first plot! Let's make a sky map of the APOGEE catalog.\n",
@@ -389,7 +318,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -434,7 +363,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -464,7 +393,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -482,7 +411,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -544,7 +473,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -606,7 +535,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -625,7 +554,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -686,7 +615,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -721,7 +650,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -781,7 +710,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -805,16 +734,24 @@
    "source": [
     "# 12 The Red Clump Catalog\n",
     "\n",
-    "Description here. Distances! Because of distances, can make spatial map, similar to Nidever+ (2014). LINK\n",
-    "\n",
-    "To read catalog in, run EITHER the pyfits or the apogee code. The RC clump catalog will be automatically downloaded. If you have already downloaded the catalog from http://data.sdss3.org/sas/dr12/apogee/vac/apogee-rc/cat/apogee-rc-DR12.fits, the code will skip this step as long as the `data_directory` variable you defined earlier points to the location of the RC catalog.\n"
+    "Description here Bovy+ . Distances! Because of distances, can make spatial map, similar to Nidever+ (2014). LINK and lots more info."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 12.1 `pyfits` option (if running the cell below, SKIP the `apogee` module option below)"
+    "## 12.1 Getting the Data\n",
+    "  **Option 1**: Directly download the RC catalog file [here](http://data.sdss3.org/sas/dr12/apogee/vac/apogee-rc/cat/apogee-rc-DR12.fits). Once the catalog is downloaded, move the file  into the path assigned to the `data_directory` variable in Section 6.2.\n",
+    "  \n",
+    "  **Option 2**: Automatic Download. As you run the code, it will search for the *apogee-rc-DR12.fits* file in the path assigned to `data_directory`. If it is not found, the catalog will be downloaded."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 12.1 Reading the RC Catalog"
    ]
   },
   {
@@ -825,43 +762,18 @@
    },
    "outputs": [],
    "source": [
-    "import urllib # python module to optionally download catalog\n",
-    "import pyfits\n",
-    "\n",
+    "#Make sure the urllib module has been imported and geturl_func has been defined!\n",
     "\n",
     "rc_file = 'apogee-rc-DR12.fits'\n",
-    "RCstar_localpath = data_directory+rc_file\n",
+    "RCstar_localpath = os.path.join(data_directory,rc_file)\n",
     "\n",
     "RCstar_file_link = 'http://data.sdss3.org/sas/dr12/apogee/vac/apogee-rc/cat/apogee-rc-DR12.fits'\n",
     "#Download allStar file if it does not exist\n",
     "if not os.path.exists(RCstar_localpath):\n",
-    "    urllib.urlretrieve(RCstar_file_link, filename=RCstar_localpath, reporthook=report)\n",
+    "    geturl_func(RCstar_file_link, filename=RCstar_localpath, reporthook=report)\n",
     "\n",
     "allRC_fits = pyfits.open(RCstar_localpath)\n",
     "allRC = allRC_fits[1].data #Takes data is HDU 1 and assigns it to allStar"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 12.2 `apogee`  option (if running the cell below, you must have SKIPPED the `pyfits` module option above)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "os.environ['APOGEE_DATA'] = data_directory\n",
-    "os.environ['APOGEE_REDUX'] = 'v603' #DR12 reduction version\n",
-    "\n",
-    "import apogee.tools.read as apread\n",
-    "allRC= apread.rcsample()  #will automatically download if catalog not available\n",
-    "print (\"Red Clump catalog file Loaded\")\n"
    ]
   },
   {
@@ -896,7 +808,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -924,6 +836,72 @@
     "2) Would you like to see an example of an indivudal star spectrum and the ASPCAP model plotted over it?\n",
     "\n",
     "THANK YOU!!!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###Finished! Cells below are notes/snippets for me until next week"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Individual Spectrum plotting"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " Optional:\n",
+    "\n",
+    "  + APOGEE module [[https://github.com/jobovy/apogee]] Jo Bovy has\n",
+    "    written an excellent python module designed to interact and\n",
+    "    manipulate APOGEE data. It simplifies many of the basic operations\n",
+    "    we will cover below and also provides more advanced tools for\n",
+    "    dealing with individual APOGEE spectra. Highly recommended!\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#### Option 2: `APOGEE`\n",
+    "\n",
+    "\n",
+    "#We refer the user to [[https://github.com/jobovy/apogee]] for\n",
+    "#  installation instuctions and assume you have a working install in the\n",
+    "#  remainder of the notebook.\n",
+    "os.environ['APOGEE_DATA'] = data_directory\n",
+    "os.environ['APOGEE_REDUX'] = 'v603' #DR12 reduction version\n",
+    "\n",
+    "import apogee.tools.read as apread\n",
+    "allStar= apread.allStar()  #will automatically download if catalog not available\n",
+    "print (\"AllStar file Loaded\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "## 12.2 `apogee`  option (if running the cell below, you must have SKIPPED the `pyfits` module option above)\n",
+    "os.environ['APOGEE_DATA'] = data_directory\n",
+    "os.environ['APOGEE_REDUX'] = 'v603' #DR12 reduction version\n",
+    "\n",
+    "import apogee.tools.read as apread\n",
+    "allRC= apread.rcsample()  #will automatically download if catalog not available\n",
+    "print (\"Red Clump catalog file Loaded\")\n"
    ]
   }
  ],
