--- a/APOGEE Data "Zero to Hero".ipynb
+++ b/APOGEE Data "Zero to Hero".ipynb
@@ -569,7 +569,7 @@
    "source": [
     "\n",
     "  Beautiful! We find a sharp peak at VHELIO_AVG~ 0 km/s because many\n",
-    "  stellar orbits are perpindicular to our line of sight when we look\n",
+    "  stellar orbits are perpendicular to our line of sight when we look\n",
     "  towards the Galactic center.\n"
    ]
   },
@@ -581,8 +581,7 @@
     "=========================\n",
     " \n",
     "\n",
-    "  This next plot is loosely based on the kinematics maps from Ness et al., i\n",
-    "n prep. (2015). Here we will map the metallicity of $l<180^{\\circ}$ sightlines in the Galactic plane.\n",
+    "  This next plot is loosely based on the kinematics maps from Ness et al., in prep. (2015). Here we will map the metallicity of $l<180^{\\circ}$ sightlines in the Galactic plane.\n",
     "\n",
     "To group neighboring stars, the code below makes use of `hexbin` from the \n",
     "`matplotlib` library. From http://matplotlib.org/api/pyplot_api.html, `hexbin` will\n",
