Added output notebook to view plots w/o running

--- a/APOGEE Data "Zero to Hero".ipynb
+++ b/APOGEE Data "Zero to Hero".ipynb
@@ -177,7 +177,7 @@
    },
    "outputs": [],
    "source": [
-    "data_directory = \"/path/to/allStarfile/\"  #### CHANGE THIS PATH\n",
+    "data_directory = \"/path/to/apogeedatadir/\"  #### CHANGE THIS PATH\n",
     "\n",
     "if not os.path.exists(data_directory):\n",
     "    print(\"\\nMake sure the data_directory path exists!\\n\")\n",
